[#019] fix flex alignation card

--- a/resources/css/admin.css
+++ b/resources/css/admin.css
@@ -4,9 +4,9 @@ body {
   background-color: var(--dark-base) !important;
 }
 
-body i {
+/* body i {
   margin: 10px;
-}
+} */
 
 .message {
   position: sticky;
